--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -3,11 +3,16 @@
         <a class="w-nav-brand" href="#">
           <div routerLink='/' class="nav-bar-logo-text">Oswald</div>
         </a>
-        <nav class="nav-menu-hidden w-nav-menu" role="navigation"><a class="nav-link w-nav-link" href="#">Dashboard</a><a class="nav-link w-nav-link" routerLink='/listing'>Listing</a><a class="nav-link w-nav-link" routerLink="/create">Create</a>
+        <nav class="nav-menu-hidden w-nav-menu" role="navigation">
+          <a class="nav-link w-nav-link" routerLink='/listing'>Listing</a>
+          <a class="nav-link w-nav-link" routerLink="/create">Create</a>
         </nav>
         <div class="w-nav-button">
           <div class="w-icon-nav-menu"></div>
         </div>
+        
+          
+       
         
       </div>
     </div>
