--- a/src/assets/css/penguin-ab9111.webflow.css
+++ b/src/assets/css/penguin-ab9111.webflow.css
@@ -86,6 +86,9 @@
     -ms-transition-timing-function: ease-in;
   transition-timing-function: ease-in;
 }
+.button.nav {
+  margin-top: 22px;
+}
 .button:hover {
   display: block;
   transform: scale(1.1);
@@ -155,6 +158,10 @@
   -webkit-align-items: center;
   -ms-flex-align: center;
   align-items: center;
+}
+.logout-container {
+  width: 50px;
+  float: none;
 }
 
 .nav-bar-logo-text {
