--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -1,11 +1,11 @@
 <div  class="nav-bar w-nav" data-animation="default" data-collapse="medium" data-duration="400">
       <div class="w-container">
         <a class="w-nav-brand" href="#">
-          <div routerLink='/' class="nav-bar-logo-text">Oswald</div>
+          <div routerLink='/' class="nav-bar-logo-text">Penguin</div>
         </a>
         <nav class="nav-menu-hidden w-nav-menu" role="navigation">
-          <a class="nav-link w-nav-link" routerLink='/listing'>Listing</a>
-          <a class="nav-link w-nav-link" routerLink="/create">Create</a>
+          <a class="nav-link w-nav-link" href="/listing">Listing</a>
+          <a class="nav-link w-nav-link" href="/create">Create</a>
         </nav>
         <div class="w-nav-button">
           <div class="w-icon-nav-menu"></div>
