--- a/src/app/detail/detail.component.html
+++ b/src/app/detail/detail.component.html
@@ -30,7 +30,7 @@
             <div   (click)="download()" class="action"><img  class="action-img" src="../../assets/images/download.png">
               <div>Download Latest</div>
             </div>
-            <div class="action"><img class="action-img" src="../../assets/images/edit.png">
+            <div (click)="myModalNormal.show()" class="action"><img class="action-img" src="../../assets/images/edit.png">
               <div>Edit Project Details</div>
             </div>
             <div class="action"><img class="action-img" src="../../assets/images/upload.png">
@@ -43,3 +43,29 @@
           </div>
         </div>
       </div>
+
+
+      <sm-modal #myModalNormal>
+    <modal-content>
+        
+          <form class="ui form">
+            <div class="field">
+              <label>Project Name</label>
+              <input type="text"  #newname  value="{{ (project | async)?.name }}" placeholder="{{ (project | async)?.name }}">
+            </div>
+
+            <div class="field">
+              <label>Description</label>
+              <input type="text"  #desc  value="{{ (project | async)?.description }}" placeholder="{{ (project | async)?.description }}">
+            </div>
+            
+            
+            
+            
+            <button class="ui button" (click)="update(newname.value, desc.value)" type="submit">Confirm Changes</button>
+          </form>
+         
+       
+   </modal-content>
+   
+</sm-modal>
