fixed bug with component page hiding  of form which led to trouble with getting form values

--- a/src/app/create/create.component.html
+++ b/src/app/create/create.component.html
@@ -2,7 +2,7 @@
 <div class="card-bound">
         <div class="big-card">
           
-            <form *ngIf="!submitted">
+            <form >
               <div class="selection-container w-clearfix">
                 <select (change)="postPlatformSelection(platform.value)" #platform class="slection w-select" >
                   <option value="">Choose Platform</option>
