--- a/src/app/detail/detail.component.html
+++ b/src/app/detail/detail.component.html
@@ -62,7 +62,7 @@
             
             
             
-            <button class="ui button" (click)="update(newname.value, desc.value)" type="submit">Confirm Changes</button>
+            <button class="ui button" (click)="update(newname.value, desc.value);myModalNormal.show();" type="submit">Confirm Changes</button>
           </form>
          
        
