--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -4,8 +4,8 @@
           <div routerLink='/' class="nav-bar-logo-text">Penguin</div>
         </a>
         <nav class="nav-menu-hidden w-nav-menu" role="navigation">
-          <a class="nav-link w-nav-link" href="/listing">Listing</a>
-          <a class="nav-link w-nav-link" href="/create">Create</a>
+          <a class="nav-link w-nav-link" href="/listing">All Projects</a>
+          <a class="nav-link w-nav-link" href="/create"> Create Project</a>
         </nav>
         <div class="w-nav-button">
           <div class="w-icon-nav-menu"></div>
